# timer-demo

./: .flake8  pyproject.toml
tests/: test_timer_demo.py
timer_demo/: cli.py  timer.py
