[tool.poetry]
name = "timer-demo"
version = "0.1.0"
description = ""
authors = ["Mark Rawls <markrawls96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.17.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
flake8 = "^3.8.3"

[tool.poetry.scripts]
td = 'timer_demo.cli:main'

[tool.autopep8]
max_line_length = 95
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

